--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
     "@plasmicapp/cli": "^0.1.342",
     "@plasmicapp/react-web": "^0.2.400",
     "next": "14.2.32",
